fix aligning again.

--- a/survival.css
+++ b/survival.css
@@ -2,6 +2,7 @@
 /*{border: 5px solid red;}*/
 html {
       height: 100%;
+      background-color: black;
     }
     body {
        width: 800px;
